examples/test/testpolicy3189.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3189
  namespace: namespace439
spec:
  podSelector:
    matchLabels:
      key42: value34
      key10: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value44
          key25: value21
          key35: value25
      podSelector:
        matchLabels:
          key44: value10
